--- a/foodapp/src/styles/favs.css
+++ b/foodapp/src/styles/favs.css
@@ -1,4 +1,27 @@
-h1.hFavTop {
+div.wrapFav div.sortButtons {
+  position: absolute;
+  width: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+div.wrapFav div.sortButtons button {
+  padding: 3px 6px;
+  width: 35px;
+  height: 35px;
+  background-color: #fad816;
+  border: none;
+}
+
+div.wrapFav div.sortButtons button i {
+  font-size: 26px;
+}
+
+div.wrapFav h1.hFavTop {
   text-align: center;
   font-size: 36px;
   text-transform: uppercase;
@@ -7,7 +30,7 @@ h1.hFavTop {
   border-bottom: 1px solid black;
 }
 
-div.favZone {
+div.wrapFav div.favZone {
   width: 98%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -21,7 +44,7 @@ div.favZone {
   margin: 0 auto;
 }
 
-div.favZone div.favElement {
+div.wrapFav div.favZone div.favElement {
   margin: 10px;
   cursor: pointer;
   background-color: white;
@@ -29,43 +52,46 @@ div.favZone div.favElement {
   position: relative;
   width: 300px;
   height: 200px;
+  -webkit-box-shadow: 6px 5px 14px 4px rgba(0, 0, 0, 0.32);
+          box-shadow: 6px 5px 14px 4px rgba(0, 0, 0, 0.32);
 }
 
-div.favZone div.favElement:hover img {
+div.wrapFav div.favZone div.favElement:hover img {
   opacity: 0.5;
 }
 
-div.favZone div.favElement:hover button {
+div.wrapFav div.favZone div.favElement:hover button {
   top: 5%;
 }
 
-div.favZone div.favElement img {
+div.wrapFav div.favZone div.favElement img {
   width: 100%;
   height: 100%;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
-div.favZone div.favElement h2 {
+div.wrapFav div.favZone div.favElement h2 {
   height: 80px;
   width: 100%;
   position: absolute;
   bottom: 0;
-  background-color: rgba(218, 250, 39, 0.541);
+  background-color: rgba(250, 216, 22, 0.38);
   margin: 0;
+  color: black;
   -webkit-transition: 0.4s;
   transition: 0.4s;
   text-align: center;
   font-size: 20px;
 }
 
-div.favZone div.favElement h2:hover {
-  background-color: #dafa27;
+div.wrapFav div.favZone div.favElement h2:hover {
+  background-color: #fad816;
   left: 0;
   letter-spacing: 0.5px;
 }
 
-div.favZone div.favElement button {
+div.wrapFav div.favZone div.favElement button {
   position: absolute;
   top: -100%;
   right: 5%;
@@ -75,7 +101,104 @@ div.favZone div.favElement button {
   transition: 0.4s;
 }
 
-div.favZone div.favElement button i {
+div.wrapFav div.favZone div.favElement button i {
   font-size: 26px;
+}
+
+@media (max-width: 670px) {
+  div.wrapFav div.sortButtons {
+    position: absolute;
+    width: 60px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  div.wrapFav div.sortButtons button {
+    padding: 3px 6px;
+    width: 25px;
+    height: 25px;
+    background-color: #fad816;
+    border: none;
+  }
+  div.wrapFav div.sortButtons button i {
+    font-size: 16px;
+  }
+  div.wrapFav h1.hFavTop {
+    text-align: right;
+    font-size: 22px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid black;
+  }
+  div.wrapFav div.favZone {
+    width: 98%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    max-width: 1280px;
+    margin: 0 auto;
+  }
+  div.wrapFav div.favZone div.favElement {
+    margin: 10px;
+    cursor: pointer;
+    background-color: white;
+    overflow: hidden;
+    position: relative;
+    width: 300px;
+    height: 200px;
+    -webkit-box-shadow: 6px 5px 14px 4px rgba(0, 0, 0, 0.32);
+            box-shadow: 6px 5px 14px 4px rgba(0, 0, 0, 0.32);
+  }
+  div.wrapFav div.favZone div.favElement:hover img {
+    opacity: 0.5;
+  }
+  div.wrapFav div.favZone div.favElement:hover button {
+    top: 5%;
+  }
+  div.wrapFav div.favZone div.favElement img {
+    width: 100%;
+    height: 100%;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  div.wrapFav div.favZone div.favElement h2 {
+    height: 80px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(250, 216, 22, 0.38);
+    margin: 0;
+    color: black;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    text-align: center;
+    font-size: 20px;
+  }
+  div.wrapFav div.favZone div.favElement h2:hover {
+    background-color: #fad816;
+    left: 0;
+    letter-spacing: 0.5px;
+  }
+  div.wrapFav div.favZone div.favElement button {
+    position: absolute;
+    top: -100%;
+    right: 5%;
+    background-color: transparent;
+    border: none;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  div.wrapFav div.favZone div.favElement button i {
+    font-size: 26px;
+  }
 }
 /*# sourceMappingURL=favs.css.map */
