--- a/foodapp/src/styles/favs.scss
+++ b/foodapp/src/styles/favs.scss
@@ -1,3 +1,24 @@
+div.wrapFav {
+
+
+div.sortButtons {
+    position: absolute;
+    width: 80px;
+    display: flex;
+    justify-content: space-evenly;
+    button {
+        padding: 3px 6px;
+        width: 35px;
+        height: 35px;
+        background-color: rgb(250, 216, 22);
+        border: none;
+        i {
+            font-size: 26px;
+
+        }
+    }
+}
+
 h1.hFavTop {
     text-align: center;
     font-size: 36px;
@@ -24,7 +45,7 @@ div.favZone {
         position: relative;
         width: 300px;
         height: 200px;
-     
+        box-shadow: 6px 5px 14px 4px rgba(0,0,0,0.32); 
         &:hover img {
            opacity: 0.5;
         }
@@ -45,14 +66,14 @@ div.favZone {
             position: absolute;
          
             bottom: 0;
-            background-color: rgba(218, 250, 39, 0.541);
+            background-color: rgba(250, 216, 22, 0.38);
             margin: 0;
-         
+            color: black;
            transition: 0.4s;
            text-align: center;
            font-size: 20px;
            &:hover{
-            background-color: rgb(218, 250, 39);
+            background-color: rgb(250, 216, 22);
             left: 0;
             letter-spacing: 0.5px;
     
@@ -72,4 +93,105 @@ div.favZone {
         }
 
     }
+}
+}
+
+@media(max-width: 670px) {
+    div.wrapFav {
+
+
+        div.sortButtons {
+            position: absolute;
+            width: 60px;
+            display: flex;
+            justify-content: space-evenly;
+            button {
+                padding: 3px 6px;
+                width: 25px;
+                height: 25px;
+                background-color: rgb(250, 216, 22);
+                border: none;
+                i {
+                    font-size: 16px;
+        
+                }
+            }
+        }
+        
+        h1.hFavTop {
+            text-align: right;
+            font-size: 22px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid black;
+        }
+        
+        
+        div.favZone {
+            width: 98%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            max-width: 1280px;
+            margin: 0 auto;
+        
+            div.favElement {
+                margin: 10px;
+                cursor: pointer;
+                background-color: rgb(255, 255, 255);
+                overflow: hidden;
+                position: relative;
+                width: 300px;
+                height: 200px;
+                box-shadow: 6px 5px 14px 4px rgba(0,0,0,0.32); 
+                &:hover img {
+                   opacity: 0.5;
+                }
+           
+                 &:hover button{
+                    top: 5%;
+                   
+                 }
+                img {
+                   width: 100%;
+                   height: 100%;
+                   transition: 0.4s;
+                  
+                }
+                h2 {
+                    height: 80px;
+                    width: 100%;
+                    position: absolute;
+                 
+                    bottom: 0;
+                    background-color: rgba(250, 216, 22, 0.38);
+                    margin: 0;
+                    color: black;
+                   transition: 0.4s;
+                   text-align: center;
+                   font-size: 20px;
+                   &:hover{
+                    background-color: rgb(250, 216, 22);
+                    left: 0;
+                    letter-spacing: 0.5px;
+            
+                 }
+                }
+                button {
+                    position: absolute;
+                    top: -100%;
+                    right: 5%;
+                    background-color: transparent;
+                    border: none;
+                    transition: 0.4s;
+                  i {
+                      font-size: 26px;
+                  
+                  }
+                }
+        
+            }
+        }
+        }
 }
