--- a/foodapp/src/styles/list.css
+++ b/foodapp/src/styles/list.css
@@ -14,6 +14,7 @@ div.listWrapper {
   height: calc(100vh - 80px);
   width: 100%;
   margin: 0 auto;
+  height: auto;
 }
 
 div.foodBox {
@@ -32,7 +33,7 @@ div.foodBox div.infoBox {
   position: absolute;
   z-index: 20;
   bottom: 0;
-  background-color: rgba(177, 209, 33, 0.911);
+  background-color: #fad816;
   width: 100%;
   height: 80px;
   display: -webkit-box;
@@ -54,6 +55,17 @@ div.foodBox div.infoBox a h1 {
   color: black;
   padding: 0 10px;
   text-align: left;
-  font-size: 22px;
+  font-size: 18px;
+}
+
+div.none {
+  width: 100%;
+  height: 20vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=list.css.map */
