--- a/foodapp/src/styles/list.scss
+++ b/foodapp/src/styles/list.scss
@@ -10,7 +10,7 @@ align-items: center;
 height: calc(100vh - 80px);
     width: 100%;
     margin: 0 auto;
-
+    height: auto;
 }
 
 div.foodBox {
@@ -30,7 +30,7 @@ div.foodBox {
     position: absolute;
     z-index: 20;
     bottom: 0;
-    background-color: rgba(177, 209, 33, 0.911);
+    background-color: #fad816;
     width: 100%;
     height: 80px;
     display: flex;
@@ -42,9 +42,16 @@ div.foodBox {
             color: black;
             padding: 0 10px;
             text-align: left;
-            font-size: 22px;
+            font-size: 18px;
             
         }
     }
    }
+}
+
+div.none {
+    width: 100%;
+    height: 20vh;
+    display: flex;
+    justify-content: center;
 }
