--- a/foodapp/src/styles/nav.scss
+++ b/foodapp/src/styles/nav.scss
@@ -6,7 +6,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-image: linear-gradient(to right, #f5ffb3, #f0ff94, #ebff74, #e5ff4e, #ddff007c);
+    background-image: linear-gradient(
+        90deg
+        ,#fff,rgba(250, 216, 22,.48627450980392156),rgba(250, 216, 22,1));
   
     z-index: 999;
     ul {
